--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.8.2",
     "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
